# stargate-contracts

./: .env.local.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  BACKLOG_COMPLETION_CHECKLIST.md  CHANGES_SUMMARY.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TREASURY_BUG_FIXES.md  TREASURY_BUG_FIX_SUMMARY.md  TREASURY_VERIFICATION.md  VERIFICATION.md  deny.toml  docker-compose.yml  justfile
contracts/treasury/: Cargo.toml
contracts/treasury/src/: lib.rs  multisig.rs  settlement.rs
contracts/treasury/test_snapshots/: approvals_accumulate_until_threshold.1.json  authorized_caller_can_pause.1.json  authorized_caller_can_unpause.1.json  dispute_can_be_raised_against_settlement.1.json  dispute_resolved_in_favor_of_claimant.1.json  dispute_resolved_in_favor_of_counterparty.1.json  guarded_function_succeeds_after_unpause.1.json  initialize_rejects_zero_threshold.1.json  pause_and_unpause_emit_events.1.json  settlement_proceeds_when_compliance_passing.1.json  settlement_proposal_boundary_at_expiry_transition.1.json  settlement_proposal_rejected_when_invoice_paid.1.json  settlement_proposal_succeeds_when_invoice_pending.1.json  settlement_rejected_when_compliance_absent_or_failing.1.json  settlement_rejected_when_compliance_paused_and_unable_to_pass.1.json  signer_weight_change_after_approval_does_not_affect_snapshot.1.json  test_initialize_rejects_reinit.1.json  test_initialize_rejects_zero_threshold.1.json
contracts/treasury/tests/: compliance_gate_integration_test.rs  duplicate_approval_test.rs  partial_settlement_test.rs  task1_tests.rs  (+6 more)
(+63 files in other folders)
